feat: `reimbursement` endpoint impl
