# docs/swagger.yaml
@@ -20,6 +20,18 @@ definitions:
         example: 1
         type: integer
     type: object
+  controller.CreateReimbursementRequest:
+    properties:
+      amount:
+        example: 100000
+        type: integer
+      date:
+        example: "2025-01-01"
+        type: string
+      description:
+        example: Transportation
+        type: string
+    type: object
   controller.LoginRequest:
     properties:
       password:
@@ -289,4 +301,50 @@ paths:
       summary: Health check
       tags:
       - System
+  /reimbursement:
+    post:
+      consumes:
+      - application/json
+      description: Only admin can create a reimbursement by providing date, amount,
+        description, ip address and created by
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Reimbursement request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controller.CreateReimbursementRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create a new reimbursement
+      tags:
+      - Reimbursement
 swagger: "2.0"
